--- a/webapp/index/templates/index/index.html
+++ b/webapp/index/templates/index/index.html
@@ -1,53 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>MyAPP</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <!--Navbar-->
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="/">Encore</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Contact</a>
-          </li>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="/index/">Encore</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="">Peticiones</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Ayuda</a>
+                </li>
+
+            </ul>
+            <form action = "{%url 'index:cargar'%}" method="post" class="form-inline my-2 my-lg-0">
+                {% csrf_token %}
+                <button class="btn btn-primary" href="/">CARGAR ARCHIVO</button>
+            </form>
+        </div>
     </nav>
-    <!--CTA-->
+
+    <!--CTA  call-to-action section-->
     <div class="container py-5">
         <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-6 pb-4">
-            <h1 class="display-4 font-weight-bold">Elevate your listening</h1>
-            <h5>Everyday headphones that make your favorite artists sound like their performing a never-ending encore.</h5>
-            <a class="btn btn-primary mt-2" href="/products">FIND YOUR SET</a>
-          </div>
-          <div class="col-sm-12 col-md-12 col-lg-6">
-          </div>
+            <div class="col-sm-12 col-md-12 col-lg-6 pb-4">
+                <h1 class="display-4 font-weight-bold">Elevate your listening</h1>
+                <h5>Everyday headphones that make your favorite artists sound like their performing a never-ending
+                    encore.</h5>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+            </div>
         </div>
-      </div>
+
+        <form>
+            <div class="row">
+                <div class="col">
+                    <textarea class="form-control" name="entrada" id="entrada" rows="15" placeholder="Ingrese XML"></textarea>
+                </div>
+                <div class="col">
+                    <textarea disabled class="form-control" id="respuesta" rows="15">{{respuesta}}</textarea>
+                </div>
+            </div>
+            <button class="btn btn-primary mt-2" type="enviar">ENVIAR</button>
+        </form>
+       
+        </div>
+
+
+    </div>
+
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
