--- a/webapp/index/templates/index/base.html
+++ b/webapp/index/templates/index/base.html
@@ -23,12 +23,23 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="{%url 'index:index'%}">Peticiones</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" href="{%url 'index:index'%}">Ayuda</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Peticiones
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="/pdf/">Reporte PDF</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="/prueba/">Prueba Mensaje</a>
+                    </div>
+                  </li>
 
             </ul>
             {% block nav%}
