--- a/webapp/index/templates/index/base.html
+++ b/webapp/index/templates/index/base.html
@@ -26,15 +26,22 @@
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="{%url 'index:index'%}">Peticiones</a>
                 </li> -->
-                <li class="nav-item">
-                    <a class="nav-link" href="{%url 'index:index'%}">Ayuda</a>
-                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      Ayuda
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="/reportes/">Desarrollador</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="/prueba/">Documentación</a>
+                    </div>
+                  </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Peticiones
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="/reportes/">Reportes</a>
                       <a class="dropdown-item" href="/pdf/">Reporte PDF</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="/prueba/">Prueba Mensaje</a>
