--- a/webapp/index/templates/index/reportes.html
+++ b/webapp/index/templates/index/reportes.html
@@ -1,22 +1,71 @@
-{%extends "index/base.html"%}
+{% extends 'index/base.html' %} {% block content %}
 
-
-{% block content%}
-<!--CTA  call-to-action section-->
-<div class="container py-5 .bg-secondary.bg-gradient">
-    <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-6 pb-4">
-            <h1 class="display-4 font-weight-bold">Reportes</h1>
-            <h5>Para solicitar el análisis de mensajes indivivuales.</h5>
+<div class="row">
+  <div class="col-6 p-3 border">
+    <h2 class="text-center">Por Fecha</h2>
+    <form method="GET">
+      <label for="date" class="form-label">Fecha: </label>
+      <input
+        type="date"
+        name="date"
+        id="date"
+        class="form-control form-control-sm"
+      />
+      <div class="col-lg-2 d-grid gap-2 mx-auto p-3">
+        <input type="submit" value="Obtener" class="btn btn-sm btn-success" />
+      </div>
+    </form>
+    <div id="by-date-results">
+      {% for result in date_results %}
+      <div>{{ result.user }} - {{ result.cant }}/{{ result.total }}</div>
+      <div class="progress" style="height: 1.5rem">
+        <div
+          class="progress-bar progress-bar-striped progress-bar-animated"
+          role="progressbar"
+          aria-valuenow="{{ result.percentage }}"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        >
+          {{ result.percentage }}%
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-6">
-        </div>
+      </div>
+      {% endfor %}
     </div>
-
-    
-
+  </div>
+  <div class="col-6 p-3 border">
+    <h2 class="text-center">Por codigo de error</h2>
+    <form method="GET">
+      <label for="error" class="form-label">Codigo de error: </label>
+      <input
+        type="number"
+        name="error"
+        id="error"
+        class="form-control form-control-sm"
+      />
+      <div class="col-lg-2 d-grid gap-2 mx-auto p-3">
+        <input type="submit" value="Obtener" class="btn btn-sm btn-success" />
+      </div>
+    </form>
+    <div id="by-error-results">
+      {% for result in error_results %}
+      <div>{{ result.date }} - {{ result.cant }}/{{ result.total }}</div>
+      <div class="progress" style="height: 1.5rem">
+        <div
+          class="progress-bar progress-bar-striped progress-bar-animated"
+          role="progressbar"
+          aria-valuenow="{{ result.percentage }}"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        >
+          {{ result.percentage }}%
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
 </div>
-</div>
 
-</div>
-{%endblock%}
+{% endblock content %} {% block script %} {{ block.super }} {% load static %}
+<!-- <script src="{% static 'reports.js' %}"></script> -->
+<script src="https://code.highcharts.com/highcharts.js"></script>
+{% endblock script %}
